2005-05-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/basic-notation.itely (Basic polyphony): fix
	missing @end 

	* scripts/lilypond-book.py (write_if_updated): print file name.

	* Documentation/user/basic-notation.itely (Explicitly
	instantiating voices): idem.

	* Documentation/user/advanced-notation.itely (Text spanners):
	remove stray { } 

	* lily/context.cc (default_child_context_name): the default child
	is now first in accepts_list_.

	* ly/engraver-init.ly (RemoveEmptyRhythmicStaffContext): add
	\defaultchild to all relevant contexts.  This fixes:
	drums-pitch.ly.

	(Probably also fixes similar problems with ancient
	transcriptions getting CueVoices instead of the desired voices.)
 
	* lily/context-def.cc (get_default_child): new function.
	(get_accepted): place default child in front of list.

	* lily/parser.yy (FIXME): add DEFAULTCHILD token.

	* lily/include/context-def.hh (struct Context_def): add
	default_accept_

2005-05-03  Graham Percival  <gperlist@shaw.ca>

	* scm/define-grobs.scm: remove "remove-first" line, since
	the absent property is set to #f anyway.

	* Documentation/user/basic-notation.itely,
	advanced-notation.itely, instrument-notation.itely: minor
	fixes.

	* ly/property-init.ly: add textSpanner{Up,Down,Neutral}.

	* Documentation/user/advanced-notation.itely,
	changing-defaults.itely: consolidate Text stuff in
	advanced notation.

	* Documentation/user/global.itely: better docs for \header.

	* Documentation/user/putting.itely: new chapter; placeholder
	for future expansion.

	* Documentation/user/examples.itely: moved "suggestions for
	writing LP files" section into putting.itely.

	* Documentation/user/lilypond.itely: added new chapter,
	fixed the short table of contents.

2005-05-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/beam-quanting.cc (quanting): robustness fix, don't produce
	infinity for unfeasible beams.

	* make/lilypond.fedora.spec.in (Group): idem.
